remove resources